# food-saving-showcase

./: notes.md  pyproject.toml  requirements.txt
data/month_csv_files/: flow_counts_2022-03_ZurichSchlieren.csv  flow_counts_2022-04_ZurichSchlieren.csv  flow_counts_2022-05_ZurichSchlieren.csv  flow_counts_2022-06_ZurichSchlieren.csv  flow_counts_2022-07_ZurichSchlieren.csv  flow_counts_2022-08_ZurichSchlieren.csv  flow_counts_2022-09_ZurichSchlieren.csv  flow_counts_2022-10_ZurichSchlieren.csv  flow_counts_2022-11_ZurichSchlieren.csv  flow_counts_2022-12_ZurichSchlieren.csv
notebooks/: STL_example.ipynb  STL_pacf.ipynb  data_exploration.ipynb  data_feature_search.ipynb  data_features.ipynb  data_statisticsn.ipynb  data_transformation.ipynb  feature_examination.ipynb  menu_sold_flow_count.ipynb  meteo_data.ipynb  python_learning.ipynb  time_series_learning.ipynb
notebooks/models/: training1.ipynb
src/Application/: app.py  learning.ipynb  schedulling.py  tools.py  tutorial_app.py
src/dash_app/: app.py  python_learning.ipynb
src/data_processing/: README.md  create_data_samples_for_app.py  features.py  join_csv_files.py  people_count.py  preprocessing.py  python_learning.ipynb  test_preprocessing.py  visualize_people_counts.py
src/models/: ar_model_1.ipynb  baseline.py  baseline2.py  baseline_log_future_days.py  baseline_predict_next_day.py  baseline_predictions_future_days.py  error_lower_bound.ipynb  exp_smoothing.ipynb  exp_smoothing_prediction_future_days.py  lin_reg_predictions_future_days.py  plot_predictions.py  plot_predictions_future_days.py  sarima.ipynb  (+4 more)
(+4 files in other folders)
