[tool.poetry]
name = "no-foodwaste-showcase"
version = "0.1.0"
description = ""
authors = ["Florian Bär <florian.baer@zuehlke.com>"]
readme = "README.md"
packages = [{include = "no_foodwaste_showcase"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pandas = "^1.5.2"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"
jupyter = "^1.0.0"
pytest = "^7.2.0"
mlflow = "^2.0.1"
hyperopt = "^0.2.7"
statsmodels = "^0.13.5"
pmdarima = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
